미디어 쿼리 작성 1. @media 2. @content

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  <!-- 절대 경로로 바꿀것. /src... 로 시작 -->
   <header class="appHeader">
     <h1 class="logo">
       <a href="./main.html" class="logo__link" aria-label="Web Cafe"></a>
